Modif: Remplacement du message et de la date sur la page d'accueil puis suppression de ma clé Git

--- a/accueil/templates/accueil/index.html
+++ b/accueil/templates/accueil/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/static/accueil/style.css">
 </head>
 <body>
-    <h1>{{ message }}</h1>
-    <p>Nous sommes le {{ date_du_jour }}</p>
+    <h1>Gestion des tâches</h1>
 
     <form method="post" action="{% url 'ajouter_tache' %}">
         {% csrf_token %}
